set up  overflow-y and fix bugs in js

--- a/styles/mixins/_Introduction.scss
+++ b/styles/mixins/_Introduction.scss
@@ -5,7 +5,7 @@
     z-index: 2;
     padding: 5%;
     justify-content: flex-start;
-    overflow-y: scroll;
+    overflow-y: auto;
     .bloc {
         display: flex;
 
